fix: footer gradient on safari

--- a/src/app/core/app-footer/app-footer.scss
+++ b/src/app/core/app-footer/app-footer.scss
@@ -153,7 +153,7 @@ section {
     }
 }
 
-@property --angle{
+@property --angle {
   syntax: "<angle>";
   initial-value: 0deg;
   inherits: false;
@@ -172,11 +172,11 @@ section {
     background-image: conic-gradient(from var(--angle), #ff4545, #00ff99, #006aff, #ff0095, #ff4545);
     top: 50%;
     left: 50%;
-    translate: -50% -50%;
+    transform: translate(-50%, -50%);
     z-index: -1;
     padding: 3px;
     border-radius: calc(var(--bs-border-radius-xl) + 2px);
-    animation: 3s spin linear infinite;
+    animation: spin 3s linear infinite;
     }
     &:before{
     filter: blur(1.5rem);
